Add query chaining and update build configurations
Enhanced `Query` class to support method chaining by returning `this` in `execute` and `executeQuery`. Refined build configurations with updated repository URLs, JDK version change to 17, and added jar creation steps for better build management. Included a new `.idea/discord.xml` configuration file.